@startuml
package Rim {
PdmObject <|-- RimViewWindow
package plots {
RimViewWindow <|-- RimPlotWindow
RimPlotWindow <|-- RimPlot
RimPlot <|-- RimSummaryPlot
}
}

package RiuQwt {
class RiuSummaryQwtPlot
class RiuQwtPlotWidget
}

package RiuQtCharts {
class RiuSummaryQtChartsPlot
class RiuQtChartsPlotWidget
}

RiuPlotWidget <|--- RiuQwtPlotWidget
RiuSummaryPlot <|-- RiuSummaryQwtPlot

RiuSummaryQwtPlot --> RiuQwtPlotWidget
RiuSummaryQtChartsPlot --> RiuQtChartsPlotWidget

RiuSummaryPlot <|-- RiuSummaryQtChartsPlot
RiuPlotWidget <|--- RiuQtChartsPlotWidget

RimSummaryPlot --> RiuSummaryPlot
@enduml
